# cxx-workflows

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Doxyfile  README.md  index.js  vcpkg-configuration.json
.devcontainer/: dev.yaml  devcontainer.json
.github/workflows/: cd.yml  ci.yml  gh-pages-publish.yml  gh-release.yml  unit-ci.yml
include/: hello.h
src/: hello.cpp  main.cpp
tests/: test.cpp
v1.0.0/: files.html  graph_legend.html
v1.0.1/: hello_8h_source.html
v1.0.2/: dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  index.html
